--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   "require-dev": {
     "phpunit/phpunit": "^9.5",
     "phpstan/phpstan": "^0.12",
-    "phpcs/phpcs": "^3.5"
+    "squizlabs/php_codesniffer": "3"
   },
   "scripts": {
     "test": "phpunit"
